Below footer unwanted space removed

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class='container-fluid'>
-    <hr>
+    <!-- <hr> -->
 <div class="d-flex flex-wrap align-content-around align-items-stretch text-center">
 
   <div class="p-2 flex-fill">
-      <h4 class="font-effect-neon">Address</h4>
+      <h4 class="font-effect-fire">Address</h4>
       <address  class="mt-4">
           <a class="btn btn-outline-warning" href="https://goo.gl/maps/kmSjFFVuyRo3rmWx6" target="_blank">
           Santhosh Games Pvt Ltd,
@@ -18,7 +18,7 @@
   </div>
 
   <div class="p-2 flex-fill">
-      <h4 class="font-effect-neon">Contact with Us</h4>
+      <h4 class="font-effect-fire">Contact with Us</h4>
       <address class="mt-4">
           <a class="btn btn-outline-warning" href="tel:9842999444"> Ph: 9842999444 <i class="fab fa-whatsapp"></i></a>      
         <br><br>
@@ -33,14 +33,14 @@
   </div>
 
   <div class="p-2 flex-fill">
-      <h4 class="font-effect-neon">Feedback</h4>
+      <h4 class="font-effect-fire">Feedback</h4>
       <address>
           <span class="text-wrap"> 
             send your feedback followed by mail
           </span>
           <i class="fas fa-arrow-circle-down"></i>
           <br>
-          <a class="btn btn-outline-warning mt-4" href="mailto:tamil97mca@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Santhoshgames@gmail.com</a>          
+          <a class="btn btn-outline-warning mt-4" href="mailto:santhoshgameskpm@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Santhoshgames@gmail.com</a>          
       </address>
   </div>
 </div>
