--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -1,3 +1,25 @@
-<p>
-  category-details works!
-</p>
+<div class="container mt-5 mb-5">
+  
+  <div class="row">
+    <div class="col-sm-5">
+      <!-- <img src="https://media.giphy.com/media/OVqM34DwFyRVu/giphy.gif" alt="Ps4 Console"> -->
+      <!-- <img src="https://media.giphy.com/media/B64qn0QAU1RSDNabOq/giphy.gif" alt="XBox Controller"> -->
+      <!-- <img src="https://media.giphy.com/media/FOEO0C38oVvveWHo3V/giphy.gif" alt="XBox Controller"> -->
+      <!-- <img src="https://media.giphy.com/media/tY06Mergl3c7pMaHPu/giphy.gif" alt="" width="100%" height="auto"> -->
+      <img src="https://media.giphy.com/media/GanVMPNUlYlCQ4BcUt/giphy.gif" width="100%" height="auto">
+    </div>
+    <div class="col-sm-7">
+      <h4 class="text-wrap text-warning">Playstation 2 (Slim) Complete Set with 2 Game DVD 3D cover</h4>
+      <p class="text-wrap"> <span class=" text-warning">Brand:</span> sony entertainmant</p>
+      <h6 class="text-wrap text-warning">Product details</h6>
+      <ul class="text-wrap">
+        <li><span class="text-warning">Product Dimensions ‏ :</span>  ‎ 31 x 26 x 11 cm; 1.4 Kilograms</li>
+        <li><span class="text-warning">ASIN ‏ :</span> ‎ B07V4FLPJ9</li>
+        <li><span class="text-warning">Item part number ‏ :</span> ‎ SCPH-900004CB</li>
+        <li><span class="text-warning">Manufacturer ‏ :</span> ‎ sony entertainmant</li>
+        <li><span class="text-warning">Item Weight ‏ :</span> ‎ 1 kg 400 g</li>
+        <li><span class="text-warning">Item Dimensions LxWxH ‏ :</span> ‎ 31 x 26 x 11 Centimeters</li>
+      </ul>
+    </div>
+  </div>
+</div>
