--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,8 +1,8 @@
-<h2 class="text-center font-effect-fire mt-5 mb-4">About Us</h2>
+<h2 class="text-center font-effect-fire mt-5">About Us</h2>
 
-<div class="text-center">
+<div class="text-center mt-5">
     <span>
-        <img src="../../assets/founder/2847-Tamilselvan.jpg"  width="30%" height="30%"  alt="Founder image" class="rounded-circle">
+        <img src="../../assets/founder/santhosh.jpg"  width="30%" height="30%"  alt="Founder image" class="rounded-circle">
     </span>
     <h3 class="page-header text-wrap mt-4 mb-4 text-success">Founder of Santhosh Games</h3>
     <p class="text-danger">Since 2018</p>
@@ -13,7 +13,7 @@
 <div class="d-flex flex-wrap align-content-around align-items-center mb-3 text-center">
 
     <div class="p-2 flex-fill bg-warning">
-        <h4 class="font-effect-neon">Wholesale</h4>
+        <h4 class="font-effect-fire">Wholesale</h4>
         <ul>
             <li>Ps2 - 60 games - 1 constroller- <i class="fas fa-rupee-sign"></i> 3500 (5 pcs)</li>
             <li>Ps2 - 60 games - 1 constroller- <i class="fas fa-rupee-sign"></i> 3500 (5 pcs)</li>
