Admin login popup added

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,16 +1,17 @@
-<h2 class="text-center font-effect-fire mt-5">About Us</h2>
+<!-- <h2 class="text-center font-effect-fire mt-5">About Us</h2> -->
 
-<div class="text-center mt-5">
+<!-- <div class="text-center mt-5">
     <span>
-        <img src="../../assets/founder/santhosh.jpg"  width="30%" height="30%"  alt="Founder image" class="rounded-circle">
+        <img src="../../assets/founder/2847-Tamilselvan.jpg"  width="30%" height="30%"  alt="Founder image" class="rounded-circle">
     </span>
     <h3 class="page-header text-wrap mt-4 mb-4 text-success">Founder of Santhosh Games</h3>
     <p class="text-danger">Since 2018</p>
-</div>
-
+</div> -->
+<app-profile></app-profile>
 <hr>
+<app-teammember></app-teammember>
 
-<div class="d-flex flex-wrap align-content-around align-items-center mb-3 text-center">
+<!-- <div class="d-flex flex-wrap align-content-around align-items-center mb-3 text-center">
 
     <div class="p-2 flex-fill bg-warning">
         <h4 class="font-effect-fire">Wholesale</h4>
@@ -60,4 +61,4 @@
         </ul>
     </div>
 
-</div>
+</div> -->
