--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,14 +1,14 @@
-<div class="container">
+<!-- <div class="container">
   <h2 class="text-center font-effect-fire mt-5 mb-4">{{title}}</h2>
 
 <div class="d-flex flex-wrap align-content-around align-items-center mb-5 text-center">
 
   <div class="p-3 flex-fill bg-warning" *ngFor="let i of listOfCategory">
-    <h6 class="text-warning">{{i.categoryName}}</h6>
+    <h3 class="text-warning">{{i.categoryName}}</h3>
     <a routerLink="/category-details">
     <button type="button" class="btn btn-outline-info">{{i.view}}</button>
   </a>
-  </div>
+  </div> -->
 
   <!-- <div class="p-2 flex-fill bg-warning">
     <h6>Most popular</h6>
@@ -24,7 +24,7 @@
     <h6>Pc Games</h6>
     <button type="button" class="btn btn-outline-info">View</button>
   </div>
-  
+
   <div class="p-2 flex-fill bg-warning">
     <h6>Ps2 Games</h6>
     <button type="button" class="btn btn-outline-info">View</button>
@@ -55,5 +55,258 @@
     <button type="button" class="btn btn-outline-info">View</button>
   </div> -->
 
-</div>
-</div>
+<!-- </div>
+</div> -->
+
+
+
+
+<link rel="stylesheet" href="https://cdn.lineicons.com/3.0/lineicons.css">
+<section class="price_plan_area section_padding_130_80" id="pricing">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-sm-8 col-lg-6">
+            <!-- Section Heading-->
+            <div class="section-heading text-center wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <!-- <h6>Pricing Plans</h6> -->
+              <!-- <h3 class="text-wrap">Let's find a way together</h3>
+              <p class="text-wrap">Appland is completely creative, lightweight, clean &amp; super responsive app landing page.</p> -->
+              <div class="line"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <!-- Single Price Plan Area-->
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+            <div class="single_price_plan wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <div class="title">
+                <h3>Ps2 Slim</h3>
+                <h5>Sony Entertainment</h5>
+                <div class="line"></div>
+              </div>
+              <div class="price">
+                <h4>$4,800</h4>
+              </div>
+              <div class="description">
+                <p><i class="lni lni-checkmark-circle"></i>Warranty: 10days</p>
+                <p><i class="lni lni-checkmark-circle"></i>320GB Hard Disk</p>
+                <p><i class="lni lni-checkmark-circle"></i>60 Games</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 Joystick</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 HDMI Cable</p>
+              </div>
+              <div class="button"><a class="btn btn-success btn-2" routerLink="/category-details">View Details</a></div>
+            </div>
+          </div>
+          <!-- Single Price Plan Area-->
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+            <div class="single_price_plan active wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <!-- Side Shape-->
+              <div class="side-shape"><img src="https://bootdey.com/img/popular-pricing.png" alt=""></div>
+              <div class="title"><span>Popular</span>
+                <h3>Ps2 Slim</h3>
+                <h5>Sony Entertainment</h5>
+                <div class="line"></div>
+              </div>
+              <div class="price">
+                <h4>$5,500</h4>
+              </div>
+              <div class="description">
+                <p><i class="lni lni-checkmark-circle"></i>Warranty: 10days</p>
+                <p><i class="lni lni-checkmark-circle"></i>320GB Hard Disk</p>
+                <p><i class="lni lni-checkmark-circle"></i>120+ Games</p>
+                <p><i class="lni lni-checkmark-circle"></i>2 Joystick</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 HDMI Cable</p>
+              </div>
+              <div class="button"><a class="btn btn-warning" routerLink="/category-details">View Details</a></div>
+            </div>
+          </div>
+          <!-- Single Price Plan Area-->
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+            <div class="single_price_plan wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <div class="title">
+                <h3>Ps3 Slim</h3>
+                <h5>Sony Entertainment</h5>
+                <div class="line"></div>
+              </div>
+              <div class="price">
+                <h4>$12,000</h4>
+              </div>
+              <div class="description">
+                <p><i class="lni lni-checkmark-circle"></i>Warranty: 10days</p>
+                <p><i class="lni lni-checkmark-circle"></i>320GB Hard Disk</p>
+                <p><i class="lni lni-checkmark-circle"></i>25 Games</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 Joystick</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 HDMI Cable</p>
+              </div>
+              <div class="button"><a class="btn btn-info" routerLink="/category-details">View Details</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="price_plan_area section_padding_130_80" id="pricing">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-sm-8 col-lg-6">
+            <!-- Section Heading-->
+            <div class="section-heading text-center wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <!-- <h6>Pricing Plans</h6> -->
+              <!-- <h3 class="text-wrap">Let's find a way together</h3>
+              <p class="text-wrap">Appland is completely creative, lightweight, clean &amp; super responsive app landing page.</p> -->
+              <div class="line"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <!-- Single Price Plan Area-->
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+            <div class="single_price_plan wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <div class="title">
+                <h3>Ps3 Super Slim</h3>
+                <h5>Sony Entertainment</h5>
+                <div class="line"></div>
+              </div>
+              <div class="price">
+                <h4>$14,000</h4>
+              </div>
+              <div class="description">
+                <p><i class="lni lni-checkmark-circle"></i>Warranty: 10days</p>
+                <p><i class="lni lni-checkmark-circle"></i>500GB Hard Disk</p>
+                <p><i class="lni lni-checkmark-circle"></i>35 Games</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 Joystick</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 HDMI Cable</p>
+              </div>
+              <div class="button"><a class="btn btn-success btn-2" routerLink="/category-details">View Details</a></div>
+            </div>
+          </div>
+          <!-- Single Price Plan Area-->
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+            <div class="single_price_plan active wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <!-- Side Shape-->
+              <div class="side-shape"><img src="https://bootdey.com/img/popular-pricing.png" alt=""></div>
+              <div class="title"><span>Popular</span>
+                <h3>XBox 360 Slim</h3>
+                <h5>Sony Entertainment</h5>
+                <div class="line"></div>
+              </div>
+              <div class="price">
+                <h4>$13,000</h4>
+              </div>
+              <div class="description">
+                <p><i class="lni lni-checkmark-circle"></i>Warranty: 10days</p>
+                <p><i class="lni lni-checkmark-circle"></i>500GB Hard Disk</p>
+                <p><i class="lni lni-checkmark-circle"></i>80+ Games</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 Wireless Joystick</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 HDMI Cable</p>
+              </div>
+              <div class="button"><a class="btn btn-warning" routerLink="/category-details">View Details</a></div>
+            </div>
+          </div>
+          <!-- Single Price Plan Area-->
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+            <div class="single_price_plan wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <div class="title">
+                <h3>XBox 360 Slim</h3>
+                <h5>Sony Entertainment</h5>
+                <div class="line"></div>
+              </div>
+              <div class="price">
+                <h4>$16,000</h4>
+              </div>
+              <div class="description">
+                <p><i class="lni lni-checkmark-circle"></i>Warranty: 10days</p>
+                <p><i class="lni lni-checkmark-circle"></i>500GB Hard Disk</p>
+                <p><i class="lni lni-checkmark-circle"></i>100+ Games</p>
+                <p><i class="lni lni-checkmark-circle"></i>2 Wireless Joystick</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 HDMI Cable</p>
+              </div>
+              <div class="button"><a class="btn btn-info" routerLink="/category-details">View Details</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="price_plan_area section_padding_130_80" id="pricing">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-sm-8 col-lg-6">
+            <!-- Section Heading-->
+            <div class="section-heading text-center wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <!-- <h6>Pricing Plans</h6> -->
+              <!-- <h3 class="text-wrap">Let's find a way together</h3>
+              <p class="text-wrap">Appland is completely creative, lightweight, clean &amp; super responsive app landing page.</p> -->
+              <div class="line"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <!-- Single Price Plan Area-->
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+            <div class="single_price_plan wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <div class="title">
+                <h3>Ps4 Slim</h3>
+                <h5>Sony Entertainment</h5>
+                <div class="line"></div>
+              </div>
+              <div class="price">
+                <h4>$23,000</h4>
+              </div>
+              <div class="description">
+                <p><i class="lni lni-checkmark-circle"></i>Warranty: 10days</p>
+                <p><i class="lni lni-checkmark-circle"></i>500GB Hard Disk</p>
+                <p><i class="lni lni-checkmark-circle"></i>35 Games</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 Wireless Joystick</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 HDMI Cable</p>
+              </div>
+              <div class="button"><a class="btn btn-success btn-2" routerLink="/category-details">View Details</a></div>
+            </div>
+          </div>
+          <!-- Single Price Plan Area-->
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+            <div class="single_price_plan active wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <!-- Side Shape-->
+              <div class="side-shape"><img src="https://bootdey.com/img/popular-pricing.png" alt=""></div>
+              <div class="title"><span>Popular</span>
+                <h3>Ps4 Jailbreak Slim</h3>
+                <h5>Sony Entertainment</h5>
+                <div class="line"></div>
+              </div>
+              <div class="price">
+                <h4>$26,000</h4>
+              </div>
+              <div class="description">
+                <p><i class="lni lni-checkmark-circle"></i>Warranty: 10days</p>
+                <p><i class="lni lni-checkmark-circle"></i>1TB Hard Disk</p>
+                <p><i class="lni lni-checkmark-circle"></i>60 Games</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 Wireless Joystick</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 HDMI Cable</p>
+              </div>
+              <div class="button"><a class="btn btn-warning" routerLink="/category-details">View Details</a></div>
+            </div>
+          </div>
+          <!-- Single Price Plan Area-->
+          <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+            <div class="single_price_plan wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
+              <div class="title">
+                <h3>Ps5 Jailbreak Slim</h3>
+                <h5>Sony Entertainment</h5>
+                <div class="line"></div>
+              </div>
+              <div class="price">
+                <h4>$48,000</h4>
+              </div>
+              <div class="description">
+                <p><i class="lni lni-checkmark-circle"></i>Warranty: 10days</p>
+                <p><i class="lni lni-checkmark-circle"></i>1TB Hard Disk</p>
+                <p><i class="lni lni-checkmark-circle"></i>35 Games</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 Wireless Joystick</p>
+                <p><i class="lni lni-checkmark-circle"></i>1 HDMI Cable</p>
+              </div>
+              <div class="button"><a class="btn btn-info" routerLink="/category-details">View Details</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
