--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,8 @@
-<div class='container-fluid'>
-    <!-- <hr> -->
+<!-- <div class='container-fluid footer'>
 <div class="d-flex flex-wrap align-content-around align-items-stretch text-center">
 
   <div class="p-2 flex-fill">
-      <h4 class="font-effect-fire">Address</h4>
+      <h4>Address</h4>
       <address  class="mt-4">
           <a class="btn btn-outline-warning" href="https://goo.gl/maps/kmSjFFVuyRo3rmWx6" target="_blank">
           Santhosh Games Pvt Ltd,
@@ -18,30 +17,102 @@
   </div>
 
   <div class="p-2 flex-fill">
-      <h4 class="font-effect-fire">Contact with Us</h4>
+      <h4>Contact with Us</h4>
       <address class="mt-4">
-          <a class="btn btn-outline-warning" href="tel:9842999444"> Ph: 9842999444 <i class="fab fa-whatsapp"></i></a>      
+          <a class="btn btn-outline-warning" href="tel:9842999444"> Ph: 9842999444 <i class="fab fa-whatsapp"></i></a>
         <br><br>
         <i class="fab fa-facebook-f btn btn-outline-warning social" data-bs-toggle="tooltip" title="Facebook!" data-bs-placement="top"></i>&nbsp;
         <i class="fab fa-instagram btn btn-outline-warning social"  data-bs-toggle="tooltip" title="Instagram!" data-bs-placement="top"></i>&nbsp;
         <i class="fab fa-youtube btn btn-outline-warning social"  data-bs-toggle="tooltip" title="Youtube!" data-bs-placement="top"></i>&nbsp;
         <i class="fab fa-twitter btn btn-outline-warning social"  data-bs-toggle="tooltip" title="Twitter!" data-bs-placement="top"></i>&nbsp;
         <i class="fab fa-linkedin-in btn btn-outline-warning social"  data-bs-toggle="tooltip" title="linkedin!" data-bs-placement="top"></i>&nbsp;
-        <!-- <i class="fas fa-copyright"></i>&nbsp; -->
-
       </address>
   </div>
 
   <div class="p-2 flex-fill">
-      <h4 class="font-effect-fire">Feedback</h4>
+      <h4>Feedback</h4>
       <address>
-          <span class="text-wrap"> 
+          <span class="text-wrap">
             send your feedback followed by mail
           </span>
           <i class="fas fa-arrow-circle-down"></i>
           <br>
-          <a class="btn btn-outline-warning mt-4" href="mailto:santhoshgameskpm@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Santhoshgames@gmail.com</a>          
+          <a class="btn btn-outline-warning mt-4" href="mailto:santhoshgameskpm@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Santhoshgames@gmail.com</a>
       </address>
   </div>
 </div>
-</div>
+</div> -->
+
+
+
+<!-- template start -->
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+<footer class="footer bg-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-12 mb-0 mb-md-4 pb-0 pb-md-2">
+                <p class="mt-4">Our Services
+                  Our experienced and dedicated staff provide these services with a smile.</p>
+            </div><!--end col-->
+
+            <div class="col-lg-3 col-md-4 col-12 mt-4 mt-sm-0 pt-2 pt-sm-0">
+                <h4 class="text-light footer-head">Our Services</h4>
+                <ul class="list-unstyled footer-list mt-4">
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> WholeSale</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Retail</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Software Installation</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Playstation Skin</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Accessories</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Spare Parts</a></li>
+                </ul>
+            </div><!--end col-->
+
+            <div class="col-lg-2 col-md-4 col-12 mt-4 mt-sm-0 pt-2 pt-sm-0">
+                <h4 class="text-light footer-head">About</h4>
+                <ul class="list-unstyled footer-list mt-4">
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> About us</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Services</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Team</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Terms Policy</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Privacy Policy</a></li>
+                    <li><a href="javascript:void(0)" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Login</a></li>
+                </ul>
+            </div><!--end col-->
+
+            <div class="col-lg-3 col-md-4 col-12 mt-4 mt-sm-0 pt-2 pt-sm-0">
+                <h4 class="text-light footer-head">Locations</h4>
+                <ul class="list-unstyled footer-list mt-4">
+                    <li><a href="#" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Komarapalayam</a></li>
+                    <li><a href="#" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Bhavani</a></li>
+                    <li><a href="#" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Salem</a></li>
+                    <li><a href="#" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Gobi</a></li>
+                    <li><a href="#" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Kavindapadi</a></li>
+                    <li><a href="#" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Coimbatore</a></li>
+                    <li><a href="#" class="text-foot"><i class="mdi mdi-chevron-right mr-1"></i> Chennai</a></li>
+                </ul>
+            </div><!--end col-->
+        </div><!--end row-->
+    </div><!--end container-->
+</footer>
+<footer class="footer bg-footer footer-bar">
+    <div class="container text-center">
+        <div class="row align-items-center">
+            <div class="col-sm-6">
+                <div class="text-sm-left">
+                    <p class="mb-0"> Copyright &copy; 2022 All rights reserved.</p>
+                </div>
+            </div><!--end col-->
+
+            <div class="col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
+                <ul class="list-unstyled text-sm-right social-icon social mb-0">
+                    <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-facebook" title="Facebook"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-instagram" title="Instagram"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-twitter" title="Twitter"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-google-plus" title="Google +"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a></li>
+                </ul><!--end icon-->
+            </div><!--end col-->
+        </div><!--end row-->
+    </div><!--end container-->
+</footer>
