--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -13,3 +13,6 @@ ul li
     background-size: cover;
     background-repeat: no-repeat;
    } */
+   h1, h2, h3, h4, h5, h6{
+    font-family: "Audiowide", sans-serif;
+  }
