--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -1,25 +1,91 @@
-<div class="container mt-5 mb-5">
-  
-  <div class="row">
-    <div class="col-sm-5">
-      <!-- <img src="https://media.giphy.com/media/OVqM34DwFyRVu/giphy.gif" alt="Ps4 Console"> -->
-      <!-- <img src="https://media.giphy.com/media/B64qn0QAU1RSDNabOq/giphy.gif" alt="XBox Controller"> -->
-      <!-- <img src="https://media.giphy.com/media/FOEO0C38oVvveWHo3V/giphy.gif" alt="XBox Controller"> -->
-      <!-- <img src="https://media.giphy.com/media/tY06Mergl3c7pMaHPu/giphy.gif" alt="" width="100%" height="auto"> -->
-      <img src="https://media.giphy.com/media/GanVMPNUlYlCQ4BcUt/giphy.gif" width="100%" height="auto">
-    </div>
-    <div class="col-sm-7">
-      <h4 class="text-wrap text-warning">Playstation 2 (Slim) Complete Set with 2 Game DVD 3D cover</h4>
-      <p class="text-wrap"> <span class=" text-warning">Brand:</span> sony entertainmant</p>
-      <h6 class="text-wrap text-warning">Product details</h6>
-      <ul class="text-wrap">
-        <li><span class="text-warning">Product Dimensions ‏ :</span>  ‎ 31 x 26 x 11 cm; 1.4 Kilograms</li>
-        <li><span class="text-warning">ASIN ‏ :</span> ‎ B07V4FLPJ9</li>
-        <li><span class="text-warning">Item part number ‏ :</span> ‎ SCPH-900004CB</li>
-        <li><span class="text-warning">Manufacturer ‏ :</span> ‎ sony entertainmant</li>
-        <li><span class="text-warning">Item Weight ‏ :</span> ‎ 1 kg 400 g</li>
-        <li><span class="text-warning">Item Dimensions LxWxH ‏ :</span> ‎ 31 x 26 x 11 Centimeters</li>
-      </ul>
-    </div>
+<div class="container mt-5">
+  <div class="row align-items-center">
+      <div class="col-lg-6 mb-4 mb-lg-0">
+          <div class="mx-auto text-center">
+              <img src="../../assets/console/ps4slim.jpg" class="rounded" alt="...">
+          </div>
+      </div>
+      <div class="col-lg-6">
+          <div class="ps-lg-6 ps-xl-10 w-lg-90">
+              <div class="mb-4">
+                  <div class="main-title title-left">Getting a Loan<span class="line-left"></span></div>
+                  <h2 class="w-90">The greater part of the people trust on us</h2>
+              </div>
+              <p class="mb-4">
+                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+              </p>
+
+
+
+              <div id="accordion" class="accordion-style">
+                  <div class="card">
+                      <div class="card-header" id="headingOne">
+                          <h5 class="mb-0">
+                              <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">How quick will my credit be subsidized?</button>
+                          </h5>
+                      </div>
+                      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-bs-parent="#accordion" style="">
+                          <div class="card-body position-relative">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.There are many variations
+                              of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="card">
+                      <div class="card-header" id="headingTwo">
+                          <h5 class="mb-0">
+                              <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">What is outsourced financial support?</button>
+                          </h5>
+                      </div>
+                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
+                          <div class="card-body position-relative">
+                              It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here,
+                              content here', making it look like readable English.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="card">
+                      <div class="card-header" id="headingThree">
+                          <h5 class="mb-0">
+                              <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">How long is an affirmed financing cost and credit offer substantial?</button>
+                          </h5>
+                      </div>
+                      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
+                          <div class="card-body position-relative">
+                              Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident,
+                              sometimes on purpose (injected humour and the like).
+                          </div>
+                      </div>
+                  </div>
+                  <div class="card">
+                      <div class="card-header" id="headingFour">
+                          <h5 class="mb-0">
+                              <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">What sorts of commercial enterprise financing do you offer?</button>
+                          </h5>
+                      </div>
+                      <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-bs-parent="#accordion">
+                          <div class="card-body position-relative">
+                              It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="card">
+                      <div class="card-header" id="headingFive">
+                          <h5 class="mb-0">
+                              <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">How might I roll out an improvement to my application?</button>
+                          </h5>
+                      </div>
+                      <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-bs-parent="#accordion">
+                          <div class="card-body position-relative">
+                              All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, Making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to
+                              generate Lorem Ipsum which looks reasonable.
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
+
+
+
 </div>
