--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<app-ourservices></app-ourservices>
 <!-- <i class="fab fa-facebook-f"></i>
 <i class="fab fa-instagram"></i>
 <i class="fab fa-youtube"></i>
@@ -12,9 +13,59 @@
 <i class="fas fa-usb-drive"></i>
 <i class="fab fa-vuejs"></i> -->
 
-<h2 class="text-center font-effect-fire mt-5 mb-4">Contact Us</h2>
-           
-<div class="container">
+<!-- <h2 class="text-center font-effect-fire mt-5 mb-4">Contact Us</h2> -->
+
+<!-- <div class="container">
     <h3>Track By Google Map</h3>
     <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3910.615793723386!2d77.69598611432167!3d11.435407749812056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba96971089ec103%3A0xf2109cd31a3cb8db!2sSanTHosH%20GameS!5e0!3m2!1sen!2sin!4v1635535367231!5m2!1sen!2sin"></iframe><a href="https://www.fnfgo.com/">FNF</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {width:100%!important;height:400px!important;}</style></div>
-</div>
+</div> -->
+
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container bootstrap snippets bootdeys mt-5">
+      <div class="row text-center">
+        <div class="col-sm-4">
+          <div class="contact-detail-box">
+            <i class="fa fa-th fa-3x text-colored"></i>
+            <h4>Get In Touch</h4>
+            <abbr title="Phone">Ph: </abbr> <a href="tel:9842999444" class="text-muted">9842999444</a><br>
+            Email: <a href="mailto:santhoshgameskpm@email.com" class="text-muted">santhoshgameskpm@gmail.com</a>
+          </div>
+        </div><!-- end col -->
+
+        <div class="col-sm-4">
+          <div class="contact-detail-box">
+            <i class="fa fa-map-marker fa-3x text-colored"></i>
+            <h4>Our Location</h4>
+
+            <address>
+              53/H Amman Nagar<br>
+              Komarapalayam, Tamil Nadu 638183<br>
+          </address>
+          </div>
+        </div><!-- end col -->
+
+        <div class="col-sm-4">
+          <div class="contact-detail-box">
+            <i class="fa fa-book fa-3x text-colored"></i>
+            <h4>24x7 Support</h4>
+
+            <p>Industry's standard dummy text.</p>
+            <h4 class="text-muted">1234 567 890</h4>
+          </div>
+        </div><!-- end col -->
+
+      </div>
+      <!-- end row -->
+
+
+      <div class="row">
+        <div class="col-sm-12 mb-3">
+          <div class="contact-map">
+            <!-- <iframe src="https://www.google.com/maps/embed/v1/place?q=New+York+University&amp;key=AIzaSyBSFRN6WWGYwmFi498qXXsD2UwkbmD74v4" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="width: 100%; height: 360px;"></iframe> -->
+            <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3910.615793723386!2d77.69598611432167!3d11.435407749812056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba96971089ec103%3A0xf2109cd31a3cb8db!2sSanTHosH%20GameS!5e0!3m2!1sen!2sin!4v1635535367231!5m2!1sen!2sin"></iframe><a href="https://www.fnfgo.com/">FNF</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {width:100%!important;height:400px!important;}</style></div>
+          </div>
+        </div><!-- end col -->
+
+      </div> <!-- end row -->
+
+    </div>
