--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
-*
-{
-    font-family: "Audiowide", sans-serif;
+*{
+    /* font-family: "Audiowide", sans-serif; */
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
 }
+html, body{
+  /* font-family: "Audiowide", sans-serif; */
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
