--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -42,5 +42,5 @@ $santhoshgames-dark-theme: mat.define-dark-theme((
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-// @include mat.all-component-themes($santhoshgames-theme);
+@include mat.all-component-themes($santhoshgames-theme);
 
